--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <title>Pet Store</title>
   </head>
   <body>
+
+<!-- NAVBAR -->
+
     <header>John Paul's Pet Store</header>
     <div class="sidenav">
       <ul class="nav flex-column d-block">
@@ -45,6 +48,8 @@
         </li>
       </ul>
     </div>
+
+<!-- MAIN CONTENT -->
 
     <div class="main-content">
       <div class="container-fluid">
