--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
     <title>Pet Store - About</title>
   </head>
   <body>
+
+<!-- NAVBAR -->
+
     <div id="page-container">
       <div id="content-wrap">
         <header>John Paul's Pet Store</header>
@@ -47,6 +50,8 @@
             </li>
           </ul>
         </div>
+
+<!-- MAIN CONTENT -->
 
         <div class="main-content">
           <h4 class="text-center">About John Paul's Pet Store</h4> 
