--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
     <title>Pet Store - Contact</title>
   </head>
   <body>
+
+<!-- NAVBAR -->
+
     <div id="page-container">
       <div id="content-wrap">
         <header>John Paul's Pet Store</header>
@@ -48,8 +51,13 @@
           </ul>
         </div>
 
+<!-- MAIN CONTENT -->
+
         <div class="main-content">
           <h4 class="text-center">Contact</h4>
+          <p>Phone: 867-5309 <br> 
+            123 Sesame Street</p>
+        
       <footer>John Paul's Pet Store 2022</footer>
     </div>
     </div>
