updates to store etc

--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,16 @@
             </li>
           </ul>
         </div>
+      </div>
 
 <!-- MAIN CONTENT -->
 
         <div class="main-content">
           <h4 class="text-center">Contact</h4>
-          <p>Phone: 867-5309 <br> 
+          <p>Phone: 513-867-5309 <br> 
             123 Sesame Street</p>
         
       <footer>John Paul's Pet Store 2022</footer>
-    </div>
     </div>
       <script src="./app.js"></script>
   </body>
