--- a/about.html
+++ b/about.html
@@ -50,12 +50,13 @@
             </li>
           </ul>
         </div>
+        </div>
 
 <!-- MAIN CONTENT -->
 
         <div class="main-content">
           <h4 class="text-center">About John Paul's Pet Store</h4> 
-          <p class="about"> Founded in 2022 with a dollar and a dream, John Paul's pet store offers the finest in unique animals with personality. Here you will find a great selection of awesome pets and pet accessories.</p>
+          <p> Founded in 2022, John Paul's pet store offers the finest in unique animals with personality. Here you will find a great selection of awesome pets.</p>
           <div>
             <div class="hours-container">
           <ul class="hours text-center pl-0">Hours of operation:
